syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.axinger.api";
import "google/protobuf/wrappers.proto";

import "google/protobuf/struct.proto";

service StockService {

  /**
  *  新增双向流式方法
 */
  rpc Stock (stream StockRequest) returns (stream StockResponse) {}

}


message StockRequest {
  string userId = 1;
  oneof content {
    string message = 2;
    StockHeartbeat heartbeat = 3;
  }
}

message StockResponse {
  string userId = 1;
  oneof content {
    string message = 2;
    StockHeartbeat heartbeat = 3;
  }
}

message StockHeartbeat {
  int64 timestamp = 1;
}
